# cudawrappers-usage-example-cmake-pull

./: .pre-commit-config.yaml  CMakeLists.txt
src/: vector_add.cpp
src/kernels/: vector_add_kernel.cu
